Add json file to persist todos

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "express-validator": "^3.2.1",
+    "jsonfile": "^3.0.1",
     "mustache-express": "^1.2.5"
   }
 }
