--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.15.4",
     "express-validator": "^3.2.1",
     "jsonfile": "^3.0.1",
+    "morgan": "^1.8.2",
     "mustache-express": "^1.2.5"
   }
 }
